change gitignore to remove Intellij related files modife Crawler for better comments

--- a/conf/gora.properties
+++ b/conf/gora.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 gora.datastore.default=org.apache.gora.hbase.store.HBaseStore
-#gora.datastore.autocreateschema=true
+gora.datastore.autocreateschema=true
 
 ###############################
 # Default SqlStore properties #
